k8s/apps/metube/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: metube
spec:
  selector:
    app: metube
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP
