k8s/apps/metube/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube
  namespace: metube
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &domain metube.${CLUSTER_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - *domain
      secretName: metube-tls
  rules:
    - host: *domain
      http:
        paths:
          - backend:
              service:
                name: metube
                port:
                  number: 8081
            path: /
            pathType: Prefix
